# ATK

./: doc.txt
.cursor/rules/: 023-ADK.mdc
AI_Tech_Consultant_Agent/: .dockerignore  .env.example  .gitignore  Dockerfile  ENV_SETUP.md  Makefile  README.md  docker-compose.md  docker-compose.yml  env.docker.example  example env test  example_usage.py  pyproject.toml  requirements.txt
AI_Tech_Consultant_Agent/.docker/: .gitkeep
AI_Tech_Consultant_Agent/agents/orchestrator_agent/: __init__.py  agent.py
AI_Tech_Consultant_Agent/docs/: AI_Tech_Consultant_Agent_Plan.md  Backend_Structure.md  Implementation_Plan.md  Technical_Overview.md
AI_Tech_Consultant_Agent/multi_tool_agent/: agent.py
AI_Tech_Consultant_Agent/scripts/: manage-data.sh  start-services.sh
AI_Tech_Consultant_Agent/src/: main.py
AI_Tech_Consultant_Agent/src/agents/: __init__.py  orchestrator_agent.py  project_planner_agent.py  runner.py  solution_strategy_agent.py  technical_writer_agent.py  tender_analysis_agent.py  visualization_agent.py
AI_Tech_Consultant_Agent/src/agents/orchestrator/: __init__.py  prompt.py
AI_Tech_Consultant_Agent/src/agents/tender_analysis/: __init__.py  prompt.py
AI_Tech_Consultant_Agent/src/core/: agent_runner.py  config.py  runner.py  shared_memory.py
AI_Tech_Consultant_Agent/src/tools/: diagram_tools.py  document_parsing_tools.py  memory_tools.py  planning_tools.py
Postgresql/: docker-compose.yml
chromadb/: docker-compose.yml
ollama-embedding-server/: docker-compose.yml
